ArticlesAPI-v1.0 fixed GET Articles/{id} endpoint returning ArticleVersion
